# pythia

./: Cargo.toml  README.md
config/: factor_groups.yaml
rust_notebooks/: Untitled.ipynb
src/: data_loader.rs  factor_analysis.rs  lib.rs  main.rs  types.rs
src/analysis/: factor_config.rs  factor_model.rs  factors.rs  mod.rs  orthogonalization.rs  pca.rs  risk_attribution.rs  weighting.rs
src/config/: mod.rs
src/data/: loader.rs  mod.rs
tests/: test_pca.rs
tests/data/: sample_prices.csv
