[package]
name = "pythia"
version = "0.1.0"
edition = "2021"
description = "A market risk analysis toolkit inspired by the Oracle of Delphi"
authors = ["Charles Maloney"]

[dependencies]
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
ndarray-stats = "0.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
approx = "0.5"
